# aibot

./: Dockerfile  docker-compose.yml  generate_session.py  pyproject.toml
alembic/: env.py
alembic/versions/: 7d8f50276cf6_initial_sources_table.py
app/: main.py
app/core/: celery_app.py  config.py  database.py  exceptions.py  models.py
app/domains/keywords/: models.py  repository.py  router.py  schemas.py  service.py
app/domains/news/: models.py  repository.py  router.py  schemas.py  service.py
app/domains/posts/: models.py  repository.py  router.py  schemas.py  service.py
app/domains/sources/: models.py  repository.py  router.py  schemas.py  service.py  tasks.py
app/infrastructure/telegram/: client.py
tests/domain/news/: test_repository.py  test_schemas.py
