[tool.poetry]
name = "aibot"
version = "1.0.0"
description = "AI Telegram Publisher"
authors = ["Mihhail327"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
orjson = "^3.9.12"
pydantic-settings = "^2.1.0"
# Data Layer
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
psycopg = {extras = ["binary"], version = "^3.1.18"}
alembic = "^1.13.1"
# Background Tasks & Cache
celery = "^5.3.6"
redis = "^5.0.1"
# Integrations
telethon = "^1.33.1"
aiogram = "^3.4.1"
openai = "^1.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
mypy = "^1.8.0"
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
strict = true
ignore_missing_imports = true